JumpScript/tests/baselines/reference/privacyCheckTypeOfFunction.errors.txt
tests/cases/compiler/privacyCheckTypeOfFunction.jump(3,22): error TS4025: Exported variable 'x' has or is using private name 'foo'.


==== tests/cases/compiler/privacyCheckTypeOfFunction.jump (1 errors) ====
    function foo() {
    }
    export var x: typeof foo;
                         ~~~
!!! error TS4025: Exported variable 'x' has or is using private name 'foo'.
    export var b = foo;
    